--- a/app/views/layouts/_titlebar.html.haml
+++ b/app/views/layouts/_titlebar.html.haml
@@ -1,6 +1,6 @@
 .navbar.navbar-default
   .container
-    .navbar-left.navbar-brand
+    .navbar-left.navbar-brand.home-title
       = link_to "Ask42", root_path, class: "navbar-brand"
     .navbar-text.navbar-right.navbar-brand
       - if user_signed_in?
