--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -20,10 +20,11 @@
           = pluralize(room.rooms_users.count, 'user')
       - if user_signed_in? and (current_user.admin? or RoomsUser.where(:user_id => current_user.id, :room_id => room.id).first.editor? rescue nil)
         %td.pull-right
-          = link_to 'Edit', rooms_path,remote: true, class: "btn btn-info edit"
-          = link_to 'List users', room_rooms_users_path(:room_id => room.id), class: "btn btn-info"
-          - if current_user.admin?
-            = link_to 'Delete', room_path(room), method: :delete, data: { confirm: "Are you sure you want to delete #{room.name}?" }, class: "btn btn-danger"
+          .btn-group
+            = link_to 'Edit', rooms_path,remote: true, class: "btn btn-default edit"
+            = link_to 'List users', room_rooms_users_path(:room_id => room.id), class: "btn btn-default"
+            - if current_user.admin?
+              = link_to 'Delete', room_path(room), method: :delete, data: { confirm: "Are you sure you want to delete #{room.name}?" }, class: "btn btn-danger"
 
 
 %table.table.table-hover
@@ -47,9 +48,10 @@
         %td
           = room.rooms_users.count
         %td
-          = link_to 'Enter', room_questions_path(room), class: "btn btn-success"
-          - if user_signed_in? and (current_user.admin? or RoomsUser.where(:user_id => current_user.id, :room_id => room.id).first.editor? rescue nil)
-            = link_to 'Edit', rooms_path,remote: true, class: "btn btn-info edit"
-            = link_to 'List users', room_rooms_users_path(:room_id => room.id), class: "btn btn-info"
-            - if current_user.admin?
-              = link_to 'Delete', room_path(room), method: :delete, data: { confirm: "Are you sure you want to delete #{room.name}?" }, class: "btn btn-danger"
+          .btn-group
+            = link_to 'Enter', room_questions_path(room), class: "btn btn-default"
+            - if user_signed_in? and (current_user.admin? or RoomsUser.where(:user_id => current_user.id, :room_id => room.id).first.editor? rescue nil)
+              = link_to 'Edit', rooms_path,remote: true, class: "btn btn-default edit"
+              = link_to 'List users', room_rooms_users_path(:room_id => room.id), class: "btn btn-default"
+              - if current_user.admin?
+                = link_to 'Delete', room_path(room), method: :delete, data: { confirm: "Are you sure you want to delete #{room.name}?" }, class: "btn btn-danger"
