--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -38,3 +38,4 @@
             = simple_form_for question, :remote => true do |f|
               = f.input :answered, :as => :hidden, :input_html => {:value => true}
               = f.submit "Answer", class: "btn btn-success"
+              = link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-danger"
