--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -37,5 +37,5 @@
           %td.action
             = simple_form_for question, :remote => true do |f|
               = f.input :answered, :as => :hidden, :input_html => {:value => true}
-              = f.submit "Answer", class: "btn btn-success"
-              = link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-danger"
+              = f.button :submit, "Answer", class: "btn btn-success btn-xs"
+              = link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger"
