--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -13,18 +13,18 @@
               .glyphicon.glyphicon-triangle-top.upvote-active
               .vote_count
                 = question.question_voters.map {|x| x.vote}.inject{|sum,x| sum + x }.to_i
-              = link_to "", vote_path(:question_id => question.id, :vote => "downvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-bottom downvote"
+              = link_to "", vote_path(:question_id => question.id, :vote => "downvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-bottom downvote vote", id: "downvote"
             - else
-              = link_to "", vote_path(:question_id => question.id, :vote => "upvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-top upvote"
+              = link_to "", vote_path(:question_id => question.id, :vote => "upvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-top upvote vote", id: "upvote"
               .vote_count
                 = question.question_voters.map {|x| x.vote}.inject{|sum,x| sum + x }.to_i
               .glyphicon.glyphicon-triangle-bottom.downvote-active
 
           - elsif user_signed_in?
-            = link_to "", vote_path(:question_id => question.id, :vote => "upvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-top upvote"
+            = link_to "", vote_path(:question_id => question.id, :vote => "upvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-top upvote vote", id: "upvote"
             .vote_count
               = question.question_voters.map {|x| x.vote}.inject{|sum,x| sum + x }.to_i
-            = link_to "", vote_path(:question_id => question.id, :vote => "downvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-bottom downvote"
+            = link_to "", vote_path(:question_id => question.id, :vote => "downvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-bottom downvote vote", id: "downvote"
 
           - else
             .vote_count
