--- a/app/views/questions/new.html.haml
+++ b/app/views/questions/new.html.haml
@@ -2,7 +2,7 @@
   Ask a question
 
 = simple_form_for @questions do |f|
-  = f.text_area :question, :class => "form-control"
+  = f.text_area :question, :class => "form-control", :required => true
   = f.association :room, as: :hidden
   = f.input :user_id, as: :hidden, :input_html =>  {:value => current_user.id}
   = f.submit 'Submit', :class => "btn btn-info"
