--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
   %head
     %title
       Ask42
+    = include_gon
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
 
