--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -33,9 +33,28 @@
           %p #{question.question}
           %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
         - if user_signed_in? and (current_user.admin? or RoomsUser.where(:user_id => current_user.id, :room_id => params[:room_id]).first.editor? rescue nil)
-          %td.action.col-lg-2.pull-right
+          %td.action.pull-right.col-lg-2
             = simple_form_for question, :remote => true do |f|
-              = f.input :answered, :as => :hidden, :input_html => {:value => true}
-              = f.button :submit, "Answer", class: "btn btn-success btn-xs"
-            - if user_signed_in? and current_user.admin?
-              = link_to '', question_path(question), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
+              .btn-group
+                = f.input :answered, :as => :hidden, :input_html => {:value => true}
+                = f.button :submit, "Answer", class: "btn btn-info btn-xs"
+                - if user_signed_in? and current_user.admin?
+                  = link_to '', question_path(question), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
+
+
+-if @questions_answered.first
+  %h3.text-center="Answered Questions"
+%table.table.table-hover
+  %tbody.list
+    - @questions_answered.each_with_index do |question, index|
+      %tr.active
+        %td.votes.small
+          .vote_count
+            = question.question_voters.map {|x| x.vote}.inject{|sum,x| sum + x }.to_i
+
+        %td.question.answered
+          %p #{question.question}
+          %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
+        - if user_signed_in? and current_user.admin?
+          %td.pull-right.col-lg-2
+            = link_to '', question_path(question), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
