--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -1,7 +1,7 @@
-%h1
+%h1.text-center
   List of rooms
   - if user_signed_in? and current_user.admin?
-    = link_to 'New room', new_room_path, class: "btn btn-default"
+    %p= link_to 'New room', new_room_path, class: "btn btn-default"
 
 
 %table.table
