--- a/app/views/questions/index.js.haml
+++ b/app/views/questions/index.js.haml
@@ -1,2 +1,1 @@
-= "$('##{@votes.first.question_id}').html(#{@votes.map {|x|x.vote}.sum})"
-
+= "$('##{params[:question_id]}').html(#{Question.find(params[:question_id]).question_voters.pluck(:vote).sum})"
