--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -8,7 +8,8 @@
   - @rooms.each do |room|
     %tr
       %td.col-lg-6
-        %h3.editable= link_to room.name, room_questions_path(room)
+        %h3.editable
+          = link_to room.name, room_questions_path(room), class: "edited"
         .editing-name.hidden
           = simple_form_for room, remote: true do |f|
             .input-group
