--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,4 +1,4 @@
-%h1.text-center
+%h1.text-center{data: {room_id: params[:room_id]}}
   = Room.find(params[:room_id]).name
   = link_to 'Ask a question', new_room_question_path, class: "btn btn-default"
 
@@ -35,11 +35,8 @@
           %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
         - if user_signed_in? and (current_user.admin? or RoomsUser.where(:user_id => current_user.id, :room_id => params[:room_id]).first.editor? rescue nil)
           %td.action.pull-right.col-lg-2
-            = simple_form_for question, :remote => true do |f|
-              .btn-group
-                = f.input :answered, :as => :hidden, :input_html => {:value => true}
-                = f.button :submit, "Answer", class: "btn btn-info btn-xs"
-                = link_to '', question_path(question), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
+            -#= button_to "Answer", {controller: :questions, action: :answer, id: question.id}, class: "btn btn-info btn-xs"
+            = link_to '', room_question_path(question, id: question.id), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
 
 
 -if @questions_answered.first
