--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -8,28 +8,8 @@
     - @questions.each do |question|
       %tr
         %td.votes
-          - if user_signed_in? and question.question_voters.where(user_id: current_user.id).last
-            - if question.question_voters.where(user_id: current_user.id).last.vote > 0
-              .glyphicon.glyphicon-triangle-top.upvote-active
-              = content_tag :div, class: "vote_count", id: question.id do
-                test
-              = link_to "", room_question_questions_voters_path(:question_id => question.id, :vote => "downvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-bottom downvote vote", id: "downvote"
-            - else
-              = link_to "", room_question_questions_voters_path(:question_id => question.id, :vote => "upvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-top upvote vote", id: "upvote"
-              = content_tag "div", class: "vote_count", id: question.id do
-                test
-              .glyphicon.glyphicon-triangle-bottom.downvote-active
-
-          - elsif user_signed_in?
-            = link_to "", room_question_questions_voters_path(:question_id => question.id, :vote => "upvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-top upvote vote", id: "upvote"
-            = content_tag "div", class: "vote_count", id: question.id do
-              test
-            = link_to "", room_question_questions_voters_path(:question_id => question.id, :vote => "downvote"), :method => :post, remote: :true, class: "glyphicon glyphicon-triangle-bottom downvote vote", id: "downvote"
-
-          - else
-            = content_tag "div", class: "vote_count", id: question.id do
-              test
-
+          =render "votes", question: question
+          
         %td.question
           %p #{question.question}
           %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
@@ -54,5 +34,5 @@
           %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
         - if user_signed_in? and current_user.admin?
           %td.pull-right.col-lg-2
-            = link_to '', question_path(question), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
+            = link_to '', room_question_path(id: question.id), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
 
