--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,4 +2,5 @@
 @import "bootstrap"
 @import "questions"
 @import "rooms"
+@import "bourbon"
 @import url(http://fonts.googleapis.com/css?family=Open+Sans)
