--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,6 +1,6 @@
 %h1.text-center{data: {room_id: params[:room_id]}}
   = Room.find(params[:room_id]).name
-  = link_to 'Ask a question', new_room_question_path, class: "btn btn-default"
+  .center= link_to 'Ask a question', new_room_question_path, class: "btn btn-default"
 
 
 %table.table.table-hover
@@ -33,6 +33,6 @@
           %p #{question.question}
           %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
         - if user_signed_in? and current_user.admin?
-          %td.pull-right.col-lg-2
+          %td.action.pull-right.col-lg-2
             = link_to '', room_question_path(id: question.id), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
 
