--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -9,13 +9,13 @@
       %tr
         %td.votes
           =render "votes", question: question
-          
+
         %td.question
           %p #{question.question}
           %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
         - if user_signed_in? and (current_user.admin? or RoomsUser.where(:user_id => current_user.id, :room_id => params[:room_id]).first.editor? rescue nil)
           %td.action.pull-right.col-lg-2
-            -#= button_to "Answer", {controller: :questions, action: :answer, id: question.id}, class: "btn btn-info btn-xs"
+            = link_to "Answer", room_question_path(:id => question.id), method: 'put',  class: "btn btn-info btn-xs", remote: true
             = link_to '', room_question_path(question, id: question.id), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
 
 
