fix button for js

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -29,10 +29,10 @@
 	}
 }
 
-tr .action a {
+tr .action input {
 	visibility: hidden
 }
-tr:hover .action a {
+tr:hover .action input {
 	visibility: visible
 }
 
