--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -6,14 +6,25 @@
 %table.table.table-hover
   %tbody.list
     - @questions.each do |question|
-      %tr{data: {unanswered: !question.answered?}}
-        %td.votes= render "votes", question: question
+      -if question.answered == true
+        %tr.answered{data: {unanswered: !question.answered?}}
+          %td.votes= render "votes", question: question
+          %td.question
+            %p #{question.question}
+            %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
+          - if user_signed_in? and (current_user.admin? or @user_is_editor)
+            %td.action.pull-right.col-lg-2
+              = button_to "Answer", room_question_path(:id => question.id), method: :put,  class: "btn-answer btn btn-info btn-xs", remote: true
+              = button_to 'delete', room_question_path(question, id: question.id), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
 
-        %td.question
-          %p #{question.question}
-          %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
-        - if user_signed_in? and (current_user.admin? or @user_is_editor)
-          %td.action.pull-right.col-lg-2
-            = link_to "Answer", room_question_path(:id => question.id), method: :put,  class: "btn-answer btn btn-info btn-xs", remote: true
-            = link_to '', room_question_path(question, id: question.id), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
+      -else
+        %tr{data: {unanswered: !question.answered?}}
+          %td.votes= render "votes", question: question
+          %td.question
+            %p #{question.question}
+            %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
+          - if user_signed_in? and (current_user.admin? or @user_is_editor)
+            %td.action.pull-right.col-lg-2
+              = button_to "Answer", room_question_path(:id => question.id), method: :put,  class: "btn-answer btn btn-info btn-xs", remote: true
+              = button_to 'delete', room_question_path(question, id: question.id), method: :delete, data: { confirm: "Are you sure you want to delete this question?" }, class: "btn btn-xs btn-danger glyphicon glyphicon-remove"
 
