--- a/app/views/layouts/_titlebar.html.haml
+++ b/app/views/layouts/_titlebar.html.haml
@@ -5,6 +5,6 @@
     .navbar-text.navbar-right.navbar-brand
       - if user_signed_in?
         = current_user.login
-        = link_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn-xs btn btn-danger"
+        = button_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn-xs btn btn-danger"
       - else
-        = link_to "Sign in", new_user_session_path, class: "btn btn-success btn-xs"
+        = button_to "Sign in", new_user_session_path, class: "btn btn-success btn-xs"
