--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,64 +3,64 @@
 @import "questions";
 @import "rooms";
 @import "bourbon";
-//@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 body {
-		font-family: 'Open Sans', $helvetica;
+	font-family: $helvetica;
+	padding-top: 90px;
 }
 
 .navbar {
-		border-radius: 0px;
-		background-color: $gray-dark;
-		border: 0px;
-		.home-title {
-				a {
-						font-weight: bold;
-						color: $gray-lighter;
-						border: 0px;
+	border-radius: 0px;
+	background-color: $gray-dark;
+	border: 0px;
+	.home-title {
+		a {
+			font-weight: bold;
+			color: $gray-lighter;
+			border: 0px;
 		}
 	}
 }
 
 .small_info {
-		color: $gray-light;
-		font-size: small
+	color: $gray-light;
+	font-size: small
 }
 .small-elem {
-		border-radius: 2px;
-		padding-left: 3px;
-		padding-right: 3px;
-		margin-right: 4px;
+	border-radius: 2px;
+	padding-left: 3px;
+	padding-right: 3px;
+	margin-right: 4px;
 }
 
 .info {
-		color: $brand-info;
-		background-color: lighten($brand-info, 30%);
+	color: $brand-info;
+	background-color: lighten($brand-info, 30%);
 }
 .success {
-		color: $brand-success;
-		background-color: lighten($brand-success, 30%);
+	color: $brand-success;
+	background-color: lighten($brand-success, 30%);
 }
 .warning {
-		color: $brand-warning;
-		background-color: lighten($brand-warning, 30%);
+	color: $brand-warning;
+	background-color: lighten($brand-warning, 30%);
 }
 
 .btn {
-		background: transparent;
-		border-radius: 2px;
+	background: transparent;
+	border-radius: 2px;
 }
 .btn-danger {
-		color: $brand-danger;
+	color: $brand-danger;
 }
 .btn-success {
-		color: $brand-success;
+	color: $brand-success;
 }
 .btn-info {
-		color: $brand-info;
+	color: $brand-info;
 }
 
 textarea {
-		margin: 0;
-		margin-bottom: 10px
+	margin: 0;
+	margin-bottom: 10px
 }
