--- a/app/views/questions/index.js.haml
+++ b/app/views/questions/index.js.haml
@@ -1,2 +1,2 @@
 console.log("toto")
-$("tbody.list").append("#{j render "questions", questions: @questions}")
+$("tbody.list").html("#{j render "questions", questions: @questions}")
