--- a/app/views/questions/_question_detail.html.haml
+++ b/app/views/questions/_question_detail.html.haml
@@ -1,5 +1,5 @@
 %td.votes
-  = render "votes", question: question
+  = render "votes_nojs", question: question
   %td.question
     %p #{question.question}
     %p.small_info by #{question.user.login} #{time_ago_in_words(question.created_at)} ago
